fix error in java 8